[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/gun.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Player/idle1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Player/idle2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Player/idle3.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Player/running1.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Player/running2.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Player/running3.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Player/running4.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Player/running5.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "Running",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=3]

custom_solver_bias = 0.0
radius = 18.8406
height = 17.897

[node name="Player" type="KinematicBody2D"]
position = Vector2( 500, 400 )
input_pickable = false
collision_layer = 2
collision_mask = 1
collision/safe_margin = 0.08
motion/sync_to_physics = false
script = ExtResource( 1 )
Bullet = ExtResource( 2 )
SHOOT_SPEED = 0.1
SPEED = 400
ACCELERATION = 10
DE_ACCELERATION = 15
HEALTH = 1

[node name="Pivot" type="Node2D" parent="."]

[node name="GunRoot" type="Position2D" parent="Pivot"]

[node name="GunSprite" type="Sprite" parent="Pivot/GunRoot"]
position = Vector2( 35, 6.37 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
flip_h = true

[node name="ShootPoint" type="Position2D" parent="Pivot/GunRoot"]
position = Vector2( 52.472, 0 )
scale = Vector2( 2, 2 )

[node name="Sprite" type="AnimatedSprite" parent="Pivot"]
scale = Vector2( 2, 2 )
frames = SubResource( 2 )
animation = "Idle"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5.302 )
shape = SubResource( 3 )

[node name="GunTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]
